Fix overflow issue in PdfViewer

--- a/src/css/apps/user/pdfviewer.css
+++ b/src/css/apps/user/pdfviewer.css
@@ -1,6 +1,6 @@
 #PdfViewer > div.body {
   padding: 0;
-  overflow-y: scroll;
+  overflow-y: hidden;
 }
 #PdfViewer > div.body > object {
   width: 100%;
